migrate to typescript and rollup, generate type definition, move a bunch of imports/exports around for better tree shaking

--- a/src/Definitions/aaf_video_crop/package.json
+++ b/src/Definitions/aaf_video_crop/package.json
@@ -2,5 +2,5 @@
     "name": "aaf_video_crop",
     "version": "0.0.0",
     "private": true,
-    "main": "./aaf_video_crop.js"
+    "main": "aaf_video_crop.ts"
 }
