--- a/src/Definitions/aaf_video_flop/package.json
+++ b/src/Definitions/aaf_video_flop/package.json
@@ -2,5 +2,5 @@
     "name": "aaf_video_flop",
     "version": "0.0.0",
     "private": true,
-    "main": "./aaf_video_flop.js"
+    "main": "aaf_video_flop.ts"
 }
