--- a/src/Definitions/horizontalBlur/package.json
+++ b/src/Definitions/horizontalBlur/package.json
@@ -2,5 +2,5 @@
     "name": "horizontalBlur",
     "version": "0.0.0",
     "private": true,
-    "main": "./horizontalBlur.js"
+    "main": "horizontalBlur.ts"
 }
