--- a/src/Definitions/toColorAndBackFade/package.json
+++ b/src/Definitions/toColorAndBackFade/package.json
@@ -2,5 +2,5 @@
     "name": "toColorAndBackFade",
     "version": "0.0.0",
     "private": true,
-    "main": "./toColorAndBackFade.js"
+    "main": "toColorAndBackFade.ts"
 }
