--- a/src/Definitions/aaf_video_position/package.json
+++ b/src/Definitions/aaf_video_position/package.json
@@ -2,5 +2,5 @@
     "name": "aaf_video_position",
     "version": "0.0.0",
     "private": true,
-    "main": "./aaf_video_position.js"
+    "main": "aaf_video_position.ts"
 }
