--- a/src/Definitions/aaf_video_scale/package.json
+++ b/src/Definitions/aaf_video_scale/package.json
@@ -2,5 +2,5 @@
     "name": "aaf_video_scale",
     "version": "0.0.0",
     "private": true,
-    "main": "./aaf_video_scale.js"
+    "main": "aaf_video_scale.ts"
 }
