--- a/src/Definitions/colorThreshold/package.json
+++ b/src/Definitions/colorThreshold/package.json
@@ -2,5 +2,5 @@
     "name": "colorThreshold",
     "version": "0.0.0",
     "private": true,
-    "main": "./colorThreshold.js"
+    "main": "colorThreshold.ts"
 }
