--- a/src/Definitions/crossfade/package.json
+++ b/src/Definitions/crossfade/package.json
@@ -2,5 +2,5 @@
     "name": "crossfade",
     "version": "0.0.0",
     "private": true,
-    "main": "./crossfade.js"
+    "main": "crossfade.ts"
 }
