--- a/src/Definitions/dreamfade/package.json
+++ b/src/Definitions/dreamfade/package.json
@@ -2,5 +2,5 @@
     "name": "dreamfade",
     "version": "0.0.0",
     "private": true,
-    "main": "./dreamfade.js"
+    "main": "dreamfade.ts"
 }
