--- a/src/Definitions/horizontalWipe/package.json
+++ b/src/Definitions/horizontalWipe/package.json
@@ -2,5 +2,5 @@
     "name": "horizontalWipe",
     "version": "0.0.0",
     "private": true,
-    "main": "./horizontalWipe.js"
+    "main": "horizontalWipe.ts"
 }
