--- a/src/Definitions/monochrome/package.json
+++ b/src/Definitions/monochrome/package.json
@@ -2,5 +2,5 @@
     "name": "monochrome",
     "version": "0.0.0",
     "private": true,
-    "main": "./monochrome.js"
+    "main": "monochrome.ts"
 }
