--- a/src/Definitions/randomDissolve/package.json
+++ b/src/Definitions/randomDissolve/package.json
@@ -2,5 +2,5 @@
     "name": "randomDissolve",
     "version": "0.0.0",
     "private": true,
-    "main": "./randomDissolve.js"
+    "main": "randomDissolve.ts"
 }
