--- a/src/Definitions/staticDissolve/package.json
+++ b/src/Definitions/staticDissolve/package.json
@@ -2,5 +2,5 @@
     "name": "staticDissolve",
     "version": "0.0.0",
     "private": true,
-    "main": "./staticDissolve.js"
+    "main": "staticDissolve.ts"
 }
