--- a/src/Definitions/verticalWipe/package.json
+++ b/src/Definitions/verticalWipe/package.json
@@ -2,5 +2,5 @@
     "name": "verticalWipe",
     "version": "0.0.0",
     "private": true,
-    "main": "./verticalWipe.js"
+    "main": "verticalWipe.ts"
 }
